--- a/style.css
+++ b/style.css
@@ -51,12 +51,13 @@ body {
 }
 
 .character-layer-container {
-    width: 100%;
-    height: 400px; /* Hauteur de la zone de création du personnage */
     position: relative;
+    width: 300px; /* Largeur fixe pour la zone de création */
+    height: 400px; /* Hauteur fixe pour la zone de création */
     margin: auto;
-    border: 2px solid #ccc; /* Pour voir les limites */
+    border: 2px solid #ccc;
 }
+
 
 .character-layer {
     position: absolute;
@@ -70,23 +71,23 @@ body {
 
 /* Positionnement spécifique des calques */
 #face-layer {
-    width: 80px; /* Ajuste la taille du visage */
-    height: 88px; /* Ajuste la hauteur */
+    width: 100px; /* Ajuste la taille du visage */
+    height: auto; /* Ajuste la hauteur */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 #hair-layer {
-    width: 120px; /* Ajuste la taille des cheveux */
-    height: 200px;
+    width: 200px; /* Ajuste la taille des cheveux */
+    height: auto;
     top: 60%; /* Déplace les cheveux vers le bas */
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 #shirt-layer {
-    width: 100px; /* Taille ajustée pour le t-shirt */
+    width: 153px; /* Taille ajustée pour le t-shirt */
     height: auto;
     top: 65%;
     left: 50%;
@@ -94,7 +95,7 @@ body {
 }
 
 #skin-layer {
-    width: 100px;
+    width: 173px;
     height: auto;
     top: 50%;
     left: 50%;
