--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
 body {
     background-color: #1a1a2e;
     color: white;
+    display: flex;
+    justify-content: center;  /* Centre horizontalement */
+    align-items: center;  /* Centre verticalement */
+    height: 100vh;  /* Utilise toute la hauteur de la fenêtre */
+    margin: 0;  /* Supprime la marge par défaut du body */
 }
+
+.container {
+    width: 100%;  /* Largeur de 100% pour s'adapter au responsive */
+    max-width: 1200px;  /* Vous pouvez ajuster cette valeur pour limiter la largeur */
+}
+
 .character-container {
     text-align: center;
     background-color: #0f3460;
@@ -32,13 +43,19 @@ body {
     transform: scale(1.1);
 }
 
-.selection-img {
-    width: 80px;  /* Taille des images */
-    height: 80px;
-    margin: 10px;
+#selection-area img {
+    width: 80px;  /* Définir une largeur fixe pour les images */
+    height: 80px; /* Définir une hauteur fixe pour les images */
+    object-fit: contain; /* Assurer que l'image garde ses proportions sans déformation */
+    margin: 5px;
     cursor: pointer;
-    transition: transform 0.3s ease;  /* Effet au survol */
+    transition: transform 0.3s ease;  /* Effet de zoom au survol */
 }
+
+#selection-area img:hover {
+    transform: scale(1.1);  /* Agrandissement de l'image au survol */
+}
+
 
 .selection-img:hover {
     transform: scale(1.1);  /* Agrandissement au survol */
@@ -48,14 +65,21 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;  /* Aligne les images */
+    border: 2px solid white;
+    border-radius: 30px;
+    padding: 15px;
 }
+
+
 
 .character-layer-container {
     position: relative;
     width: 300px; /* Largeur fixe pour la zone de création */
     height: 400px; /* Hauteur fixe pour la zone de création */
     margin: auto;
-    border: 2px solid #ccc;
+    border: 2px solid white;
+    border-radius: 30px;
+
 }
 
 
@@ -73,7 +97,7 @@ body {
 #face-layer {
     width: 100px; /* Ajuste la taille du visage */
     height: auto; /* Ajuste la hauteur */
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -81,7 +105,7 @@ body {
 #hair-layer {
     width: 200px; /* Ajuste la taille des cheveux */
     height: auto;
-    top: 60%; /* Déplace les cheveux vers le bas */
+    top: 50%; /* Déplace les cheveux vers le bas */
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -89,7 +113,7 @@ body {
 #shirt-layer {
     width: 153px; /* Taille ajustée pour le t-shirt */
     height: auto;
-    top: 65%;
+    top: 55%;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -97,7 +121,7 @@ body {
 #skin-layer {
     width: 173px;
     height: auto;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
